[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
shank = "0.4.2"
solana-program = "2.1.11"
spl-discriminator = "0.4.1"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
thiserror = "2.0.11"

[dev-dependencies]
solana-program-test = "2.1.11"
solana-sdk = "2.1.11"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
name="todo"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

