[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
solana-program = "2.1.11"
spl-discriminator = "0.4.1"

[dev-dependencies]
solana-program-test = "2.1.11"
solana-sdk = "2.1.11"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
name="todo"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

